# BuildOcc

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: datasets_and_resources.md  methodology_decisions.md
examples/: energyplus_callback.py  signal_demo.py  simulation_loop.py
examples/data/: outdoor_temps_sample.csv  tou_rate_sample.csv  zone_temps_sample.csv
examples/data/energyplus/: US+SF+CZ2B+hp+slab+IECC_2021.idf  expanded.idf
occupant_agent/: __init__.py  cli.py
occupant_agent/agent/: memory.py  occupant.py  persona.py
occupant_agent/analysis/: __init__.py  metrics.py  simulation_log.py
occupant_agent/api/: app.py
occupant_agent/core/: __init__.py  base_memory.py  base_persona.py  base_scheduler.py  registry.py
occupant_agent/data/: README.txt  activity_frequency_O1.csv  activity_frequency_O2.csv  activity_frequency_O3.csv  activity_frequency_O4.csv  mapping_coverage.csv  schedule_peak_hours.csv  tewhere_validation.csv  time_at_activity.csv  time_of_day_distributions.csv
occupant_agent/environment/: simulation.py  state.py
occupant_agent/grounding/: activity_code_map.py  fixed_schedule.py  scheduler.py
occupant_agent/llm/: __init__.py  client.py
occupant_agent/mcp_server/: server.py
occupant_agent/persistence/: store.py
occupant_agent/testing/: __init__.py  conformance.py  fixtures.py  mock_llm.py
scripts/: evaluate.py  extract_zone_temps.py  validate_signals.py  validate_strata.py
scripts/atus/: activity_code_map.py  analyze.py  download.py  parse.py
tests/integration/: test_cli.py  test_e2e_simulation.py  test_library_coverage.py  test_mcp_server.py  test_public_api.py  test_rest_api.py  test_scripts.py
tests/unit/: test_memory.py  test_metrics.py  test_occupant_room.py  test_persona.py  test_scheduler.py  test_simulation.py  test_state.py  test_store.py  test_testing_utils.py
